--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -8,29 +8,50 @@
     <div class="page-content">
       <div class="wrapper">
         <div class="work">
-          <h1 class="page-heading">{{ page.title }}</h1>
-          {{ content }}
-
-          {% for item in page.items %}
-          <div class="work-item">
-            <img
-              src="{{ item.image.src | absolute_url }}"
-              alt="{{ item.image.alt }}"
-              class="work-bubble"
-            />
+          <h1 class="page-heading">Working Papers</h1>        
+           {% for item in page.items %}
+          <div class="work-item" style="margin-bottom: -2em;">
             <span class="work-text">
-              <strong>{{ item.title }}</strong>
-              &mdash;
-              {{ item.description }}
+              <span style="color:#66DFCC;background-color:#E9FFE9"><strong>&nbsp;{{ item.numbering }}&nbsp;</strong></span>
+              {{ item.description }}<br />
+              {{ item.authors }}<br />
+              {% if item.publication != "" and item.publication != nil %}
+                {{ item.publication }}<br />
+              {% endif %}
+              {% if item.coverage != "" and item.coverage != nil %}
+                <p style="margin: 0em;"> - {{ item.coverage }}</p>
+              {% endif %}
+              {% if item.award != "" and item.award != nil %}
+                <p style="margin: 0em;"> - {{ item.award }}</p>
+              {% endif %}
+              <details>
+                <summary>Click for Abstract</summary>
+                  {{ item.abstract }}
+              </details>
+            </span>
+          </div>
+          {% endfor %}          
+          <h1 class="page-heading">In Progress</h1>
+          {% for item in page.progress %}
+          <div class="work-item" style="margin-bottom: -2em;">
+            <span class="work-text">
+              <span style="color:#66DFCC;background-color:#E9FFE9"><strong>&nbsp;{{ item.numbering }}&nbsp;</strong></span>
+              {{ item.description }}<br />
+              {% if item.publication != "" and item.publication != nil %}
+                {{ item.publication }}<br />
+              {% endif %}
+              {% if item.coverage != "" and item.coverage != nil %}
+                <p style="margin: 0em;"> - {{ item.coverage }}</p>
+              {% endif %}
+              {% if item.award != "" and item.award != nil %}
+                <p style="margin: 0em;"> - {{ item.award }}</p>
+              {% endif %}
             </span>
           </div>
           {% endfor %}
         </div>
       </div>
     </div>
-
-    {% include footer.html %}
-
     {% include foot.html %}
   </body>
 </html>
