--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
   <div class="wrapper">
-    <a class="site-title" href="{{ "" | prepend: site.baseurl | prepend: site.url }}/">
-      <img src="{{ "/assets/img/title.png" | absolute_url }}" alt="{{ site.title }}" />
+    <a class="site-title" href="{{ "" | prepend: site.baseurl | prepend: site.url }}/" style="color:#7d6075">
+      <strong>Weimin</strong> Zhou (周伟岷)
     </a>
 
     <nav class="site-nav">
