--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -37,6 +37,7 @@
             <span class="work-text">
               <span style="color:#66DFCC;background-color:#E9FFE9"><strong>&nbsp;{{ item.numbering }}&nbsp;</strong></span>
               {{ item.description }}<br />
+              {{ item.authors }}<br />
               {% if item.publication != "" and item.publication != nil %}
                 {{ item.publication }}<br />
               {% endif %}
