--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -30,8 +30,31 @@
               </details>
             </span>
           </div>
-          {% endfor %}          
-          <h1 class="page-heading">In Progress</h1>
+          {% endfor %} 
+          <h1 class="page-heading">Publications</h1>        
+           {% for item in page.items %}
+          <div class="work-item" style="margin-bottom: -2em;">
+            <span class="work-text">
+              <span style="color:#66DFCC;background-color:#E9FFE9"><strong>&nbsp;{{ item.numbering }}&nbsp;</strong></span>
+              {{ item.description }}<br />
+              {{ item.authors }}<br />
+              {% if item.publication != "" and item.publication != nil %}
+                {{ item.publication }}<br />
+              {% endif %}
+              {% if item.coverage != "" and item.coverage != nil %}
+                <p style="margin: 0em;"> - {{ item.coverage }}</p>
+              {% endif %}
+              {% if item.award != "" and item.award != nil %}
+                <p style="margin: 0em;"> - {{ item.award }}</p>
+              {% endif %}
+              <details>
+                <summary>Click for Abstract</summary>
+                  {{ item.abstract }}
+              </details>
+            </span>
+          </div>
+          {% endfor %}
+          <h1 class="page-heading">Work In Progress</h1>
           {% for item in page.progress %}
           <div class="work-item" style="margin-bottom: -2em;">
             <span class="work-text">
