--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -32,7 +32,7 @@
           </div>
           {% endfor %} 
           <h1 class="page-heading">Publications</h1>        
-           {% for item in page.items %}
+           {% for item in page.publica %}
           <div class="work-item" style="margin-bottom: -2em;">
             <span class="work-text">
               <span style="color:#66DFCC;background-color:#E9FFE9"><strong>&nbsp;{{ item.numbering }}&nbsp;</strong></span>
